# coolledx-driver

./: .bumpversion.toml  .codecov.yml  .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  .talismanrc  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.augment/rules/: rule-agent-behavior.md  rule-ai-friendly-coding.md  rule-ci-cd.md  rule-code-style.md  rule-coding-guidelines.md  rule-commits.md  rule-configuration-management.md  rule-dependency-management.md  rule-docker-testing.md  rule-docker.md  rule-documentation.md  rule-error-handling-and-logging.md  rule-flask.md  rule-gitflow.md  rule-modular-design.md  rule-performance.md  rule-project-structure.md  rule-python-version.md  rule-security.md  rule-testing.md  self_improve.md
.cursor/rules/: rule-agent-behavior.mdc  rule-ai-friendly-coding.mdc  rule-ci-cd.mdc  rule-code-style.mdc  rule-coding-guidelines.mdc  rule-commits.mdc  rule-configuration-management.mdc  rule-dependency-management.mdc  rule-docker-testing.mdc  rule-docker.mdc  rule-documentation.mdc  rule-error-handling-and-logging.mdc  rule-flask.mdc  rule-gitflow.mdc  rule-modular-design.mdc  rule-performance.mdc  rule-project-structure.mdc  rule-python-version.mdc  rule-security.mdc  rule-testing.mdc
.cursor/rules/taskmaster/: dev_workflow.mdc  taskmaster.mdc
.github/: contributing.md  dependabot.yml
.github/workflows/: build_wheels.yaml  publish.yaml  tests.yaml
coolledx/: __init__.py  argparser.py  client.py  commands.py  render.py
docker_scripts/: scan_via_docker.sh  test_send.sh  tweak_via_docker.sh
docs/: __init__.py  api.rst  conf.py  connection_improvements.md  index.rst
run_scripts/: start_coolledx.sh  start_module.sh
src/coolledx/: __init__.py  __main__.py  advanced_protocol.py  argparser.py  basic_protocol.py  cli.py  client.py  commands.py  decoder.py  hardware.py  message_handler.py  render.py
tests/: generate_testdata.py  space_animation.jt  test_command.py  test_main.py  whale_image.jt
utils/: README.md  bt_analyzer.py  generate_testdata.py  mix.py  process-android-capture.ps1  scan.py  tweak_sign.py
