[tool.poetry]
name = "coolledx"
version = "0.1.1-dev13"
description = "Driver for the CoolLEDX LED signs (signs managed by CoolLED1248 app)"
authors = ["UpDryTwist <tathamg@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/UpDryTwist/coolledx-driver"
documentation = "https://coolledx-driver.readthedocs.io/en/latest/"
keywords = ["coolled", "coolledx", "led", "sign", "coolled1248"]

[project]
name = "coolledx"
version = "0.1.1-dev13"
description = "Driver for the CoolLEDX LED signs (signs managed by CoolLED1248 app)"
readme = "README.md"
license = "MIT"
keywords = ["coolled", "coolledx", "led", "sign", "coolled1248"]
authors = ["UpDryTwist <tathamg@gmail.com>"]
maintainers = ["UpDryTwist <tathamg@gmail.com>"]
dynamic = ["version"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "bleak = ^0.21.1",
    "Pillow = ^10.1.0-final1",
]

[tool.creosote]
venvs = [".venv"]
paths = ["coolledx", "tests", "utils"]
deps-file = "pyproject.toml"
sections = ["tool.poetry.dependencies"]

[tool.codespell]
ignore-words-list = "CoolLED,CoolLEDX"
uri-ignore-words-list = "Classess"
skip = "pyproject.toml,build,dist,.venv,.git,*.png,*.jpg,*.jpeg,*.gif,*.bmp,*.ico,*.svg,*.pyc,*.pyo,*.pyd,*.so,*.dll,*.dylib,*.exe,*.bin,*.hex,*.obj,*.o,*.a,*.lib,*.dll.a,*.db,*.sqlite,*.sqlite3"

[tool.isort]
profile = "black"

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.11"
# TODO: fix for earlier Python versions
# Include this if you're feeling you have too much time on your hands
# typeCheckingMode = "strict"

[tool.poetry.dependencies]
# Bleak is limited to Python 3.8+, < 3.14
# We require 3.11 due to some of the use of enums
python = ">=3.11,<3.14"
bleak = "^0.22.3"
Pillow = "^11.0.0"
# This is just here so that you can run the utilities out of the Docker image ...
pyshark = "^0.6.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
pytest = ">=7.4.3,<9.0.0"
pre-commit = "^4.0.1"
ruff = "^0.8.0"
black = "^24.10.0"
make = "^0.1.6.post2"
codespell = "^2.2.6"
sphinx = ">=7.2.6,<9.0.0"
sphinx-rtd-theme = "^3.0.2"
pyright = "^1.1.390"
pytest-cov = "^6.0.0"
bump-my-version = ">=0.28.1,<1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
