[tool.poetry]
name = "CoolLEDX Driver"
version = "0.1.1-dev17"
description = "Driver for the CoolLEDX LED signs (signs managed by CoolLED1248 app)"
authors = ["UpDryTwist <tathamg@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/UpDryTwist/coolledx-driver"
documentation = "https://coolledx-driver.readthedocs.io/en/latest/"
keywords = ["coolled", "coolledx", "led", "sign", "coolled1248"]
homepage = "https://github.com/UpDryTwist/coolledx-driver"
packages = [ { include = "coolledx", from = "src" } ]



[tool.bandit]
exclude_dirs = ["tests", "docs", "examples", ".venv", "dist", ".ruff_cache", ".github"]

[tool.creosote]
venvs = [".venv"]
paths = ["src", "tests", "utils"]
deps-file = "pyproject.toml"
sections = ["tool.poetry.dependencies"]

[tool.codespell]
ignore-words-list = "CoolLED,CoolLEDX"
uri-ignore-words-list = "Classess"
skip = "pyproject.toml,build,dist,.venv,.git,*.png,*.jpg,*.jpeg,*.gif,*.bmp,*.ico,*.svg,*.pyc,*.pyo,*.pyd,*.so,*.dll,*.dylib,*.exe,*.bin,*.hex,*.obj,*.o,*.a,*.lib,*.dll.a,*.db,*.sqlite,*.sqlite3"

[tool.isort]
profile = "black"

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.11"
# TODO: fix for earlier Python versions
# Include this if you're feeling you have too much time on your hands
# typeCheckingMode = "strict"

[tool.poetry.dependencies]
# Python held to < 3.14 for bleak purposes
python = ">=3.11,<4.0"
bleak = "^1.1.1"
Pillow = "^11.3.0"
# This is just here so that you can run the utilities out of the Docker image ...
pyshark = "^0.6.0"

[tool.poetry.group.dev.dependencies]
poetry = "^2.2.0"
pytest = ">=7.4.3,<9.0.0"
pre-commit = "^4.0.1"
ruff = "^0.13.0"
black = "^25.1.0"
make = "^0.1.6.post2"
codespell = "^2.2.6"
sphinx = ">=7.2.6,<9.0.0"
sphinx-rtd-theme = "^3.0.2"
pyright = "^1.1.390"
pytest-cov = "^7.0.0"
bump-my-version = "^1.2.2"
copier = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
